Load and run translation tests dynamically

--- a/Languages/EnglishSwedish/Words/Auxiliarys.txt
+++ b/Languages/EnglishSwedish/Words/Auxiliarys.txt
@@ -1,4 +1,4 @@
-﻿be::ing!am!are!is!are!been!were = var:a:_3är||||::it:
+be::ing!am!are!is!are!been!were = var:a:_3är||||::it:
 have::_ing:::_2s::_2d: = ha::r||||:de:ft:
 will::_ing:::::_3ould:_ing = ska:::::::_ulle:_olat:_
 shall:::::::_3ould: = ska:::::::_ulle:_olat:_
