--- a/Languages/EnglishSwedish/Words/Pronouns.txt
+++ b/Languages/EnglishSwedish/Words/Pronouns.txt
@@ -1,4 +1,4 @@
-﻿I!me:_y:_ine<1 = jag!mig:_n|
+I!me:_y:_ine<1 = jag!mig:_n|
 we!us!our:s<1n = vi!oss!vår|
 you::re|_s<2 = du:_ig:_in|
 you::re|_s<2n = ni!er::
