--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -1,5 +1,4 @@
 //Untranslatable
-null, ""
 "", ""
 "  ", ""
 "Joakim", "Joakim"
@@ -39,7 +38,7 @@ null, ""
 
 //Plural
 "balls", "bollar"
-"feet", "fötter"
+"feet", "fÃ¶tter"
 "streets", "gator"
 "bouncing balls", "studsbollar"
 
@@ -49,68 +48,68 @@ null, ""
 "0.5 [[ball]]", "0.5 bollar"
 
 //DefiniteNoun
-"the ball", "bollen")]
+"the ball", "bollen"
 "Play with the ball", "Lek med bollen"
 "the balls", "bollarna"
 "the streets", "gatorna"
 "Play with the balls", "Lek med bollarna"
 
 //PossessiveNoun
-"the ball's colour", "bollens färg"
-"a ball's colour", "en bolls färg"
-"The balls' colour", "Bollarnas färg"
-"2 balls' colour", "2 bollars färg"
-"the ball's colours", "bollens färger"
-"a ball's colours", "en bolls färger"
-"The balls' colours", "Bollarnas färger"
-"2 balls' colours", "2 bollars färger"
+"the ball's colour", "bollens fÃ¤rg"
+"a ball's colour", "en bolls fÃ¤rg"
+"The balls' colour", "Bollarnas fÃ¤rg"
+"2 balls' colour", "2 bollars fÃ¤rg"
+"the ball's colours", "bollens fÃ¤rger"
+"a ball's colours", "en bolls fÃ¤rger"
+"The balls' colours", "Bollarnas fÃ¤rger"
+"2 balls' colours", "2 bollars fÃ¤rger"
 
 //Quantifiers
 "one ball", "en boll"
-"two balls", "två bollar"
-"many balls", "många bollar"
+"two balls", "tvÃ¥ bollar"
+"many balls", "mÃ¥nga bollar"
 "several balls", "flera bollar"
 "all streets", "alla gator"
 
 //DoubleNouns
-"search result", "sökresultat"
-"search results", "sökresultat"
-"the search result", "sökresultatet"
-"The search results", "Sökresultaten"
+"search result", "sÃ¶kresultat"
+"search results", "sÃ¶kresultat"
+"the search result", "sÃ¶kresultatet"
+"The search results", "SÃ¶kresultaten"
 "street address", "gatuadress"
 
 //Adjectives
-"a red ball", "en röd boll"
-"The red ball", "Den röda bollen"
-"The red balls", "De röda bollarna"
-"red balls", "röda bollar"
-"Two red balls", "Två röda bollar"
-"a red ball", "en röd boll"
-"The two red balls", "De två röda bollarna"
+"a red ball", "en rÃ¶d boll"
+"The red ball", "Den rÃ¶da bollen"
+"The red balls", "De rÃ¶da bollarna"
+"red balls", "rÃ¶da bollar"
+"Two red balls", "TvÃ¥ rÃ¶da bollar"
+"a red ball", "en rÃ¶d boll"
+"The two red balls", "De tvÃ¥ rÃ¶da bollarna"
 "a faster car", "en snabbare bil"
 "faster cars", "snabbare bilar"
 "The fastest car", "Den snabbaste bilen"
 "The fastest cars", "De snabbaste bilarna"
 
 //VerbsPresentTense
-"paint the ball", "måla bollen"
-"I paint", "jag målar"
-"we paint", "vi målar"
-"you paint", "du målar"
-"he paints", "han målar"
-"she paints", "hon målar"
-"it paints", "den målar"
-"they paint", "de målar"
-"I paint the ball", "jag målar bollen"
-"He paints the ball", "Han målar bollen"
-"they paint the wall", "de målar väggen"
-"I am painting the wall", "jag målar väggen"
-"Are you painting?", "Målar du?"
-"Are you painting the wall?", "Målar du väggen?"
+"paint the ball", "mÃ¥la bollen"
+"I paint", "jag mÃ¥lar"
+"we paint", "vi mÃ¥lar"
+"you paint", "du mÃ¥lar"
+"he paints", "han mÃ¥lar"
+"she paints", "hon mÃ¥lar"
+"it paints", "den mÃ¥lar"
+"they paint", "de mÃ¥lar"
+"I paint the ball", "jag mÃ¥lar bollen"
+"He paints the ball", "Han mÃ¥lar bollen"
+"they paint the wall", "de mÃ¥lar vÃ¤ggen"
+"I am painting the wall", "jag mÃ¥lar vÃ¤ggen"
+"Are you painting?", "MÃ¥lar du?"
+"Are you painting the wall?", "MÃ¥lar du vÃ¤ggen?"
 
 //VerbsPastTense
 "I ran", "jag sprang"
-"He painted the wall", "Han målade väggen"
+"He painted the wall", "Han mÃ¥lade vÃ¤ggen"
 "They ran fast", "De sprang snabbt"
 
 //VerbsPerfectTense
@@ -138,26 +137,26 @@ null, ""
 "they could have been running", "de kunde ha sprungit"
 
 //Pronouns
-"It is mine", "Den är min"
-"It is my pen", "Det är min penna"
-"Help me", "Hjälp mig"
-"I am here", "jag är här"
-"I am with her", "jag är med henne"
-"I'm with her", "jag är med henne"
-"She's with him", "Hon är med honom"
-"It's alright", "Det är okej"
+"It is mine", "Den Ã¤r min"
+"It is my pen", "Det Ã¤r min penna"
+"Help me", "HjÃ¤lp mig"
+"I am here", "jag Ã¤r hÃ¤r"
+"I am with her", "jag Ã¤r med henne"
+"I'm with her", "jag Ã¤r med henne"
+"She's with him", "Hon Ã¤r med honom"
+"It's alright", "Det Ã¤r okej"
 
 //Prepositions
 "come to me", "kom till mig"
-"the ball is on the chair", "bollen är på stolen"
-"He is by the sea", "Han är vid havet"
-"He is at the lake", "Han är vid sjön"
+"the ball is on the chair", "bollen Ã¤r pÃ¥ stolen"
+"He is by the sea", "Han Ã¤r vid havet"
+"He is at the lake", "Han Ã¤r vid sjÃ¶n"
 
 //Conjunctions
-"Give me apples and bananas", "Ge mig äpplen och bananer"
-"Give me apples or bananas", "Ge mig äpplen eller bananer"
-"red and green apples", "röda och gröna äpplen"
-"Give me red and green apples", "Ge mig röda och gröna äpplen"
+"Give me apples and bananas", "Ge mig Ã¤pplen och bananer"
+"Give me apples or bananas", "Ge mig Ã¤pplen eller bananer"
+"red and green apples", "rÃ¶da och grÃ¶na Ã¤pplen"
+"Give me red and green apples", "Ge mig rÃ¶da och grÃ¶na Ã¤pplen"
 
 //Greetings
 "hello", "hej"
