Improved pattern extraction, Prepared to use ScoreDeficit as secondary evaluation criteria during pattern learning

--- a/Languages/EnglishSwedish/Words/Adjectives.txt
+++ b/Languages/EnglishSwedish/Words/Adjectives.txt
@@ -1,5 +1,6 @@
 ﻿alright = okej
 red:::er:est| = röd:_tt:a|re:ast|e
+yellow:::er:est| = gul:t:a|re:ast|e
 green:::er:est| = grön:t:a|re:ast|e
 fast:::er:est|: = snabb:t:a|re:ast|e:t
 easy:::_ier|_st:_ily = lätt::a|re:ast|e:
