Handle unknown words by throwing informative exception Added a few new words, ordered word lists

--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -163,4 +163,4 @@
 "hi", "hej"
 
 //Adjective references
-//"the red cat ate a blue mouse", "den röda katten åt en blå mus"
+"the red cat ate a blue mouse", "den röda katten åt en blå mus"
