--- a/Languages/EnglishSwedish/Words/Adjectives.txt
+++ b/Languages/EnglishSwedish/Words/Adjectives.txt
@@ -1,14 +1,15 @@
-﻿alright = okej
+﻿achievement-oriented = prestationsorienterad
+alright = okej
+blue:::r:st| = blå:tt:a|re:ast|e
 red:::er:est| = röd:_tt:a|re:ast|e
-yellow:::er:est| = gul:t:a|re:ast|e
-green:::er:est| = grön:t:a|re:ast|e
-fast:::er:est|: = snabb:t:a|re:ast|e:t
 easy:::_ier|_st:_ily = lätt::a|re:ast|e:
-good-looking = snygg
-English- = engelsk
-non- = icke-
-French- = fransk
-speaking = talande
 easy as pie = lätt som en pannkaka
 easy peasy = lätt som en plätt
-achievement-oriented = prestationsorienterad
+English- = engelsk
+fast:::er:est|: = snabb:t:a|re:ast|e:t
+French- = fransk
+good-looking = snygg
+green:::er:est| = grön:t:a|re:ast|e
+non- = icke-
+speaking = talande
+yellow:::er:est| = gul:t:a|re:ast|e
