--- a/Languages/EnglishSwedish/Words/Verbs.txt
+++ b/Languages/EnglishSwedish/Words/Verbs.txt
@@ -1,11 +1,12 @@
 /// Imperative|Infinitive|Participle|First|Second|Third|ThirdPlural|Past|Perfect|PastContinuous|FutureContinuous
 
 come::ing:::s::_3ame|:ing| = kom:ma:mer||||::::ma
+eat::ing:::s::_3ate|:ing| = ät:a:er||||:_2åt:it|:a
+give::_ing:::s::d|:_ing| = ge::r||||:_2v:tt|:
 help::ing:::s::ed|:ing| = hjälp:a:er||||:te:::a
 paint::ing:::s::ed|:ing| = måla::r||||:de:t|:
 play::ing:::s::ed|:ing| = lek:a:er||||:te:t|:a
 run::ning:::s::_2an|:ning| = spring:a:er||||:_3ang:_3ungit|:a
-give::_ing:::s::d|:_ing| = ge::r||||:_2v:tt|:
 
 //Settings
 BaseForm = 1
