Added more words. Two new test case does not work

--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -9,8 +9,10 @@ chair::s| = stol:en:ar|na
 colour::s| = färg:en:er|na
 foot::_3eet| = fot:en:__ötter|na
 lake::s| = sjö:n:ar|na
-mouse:_4ice| = mus:en:__öss|en
+mouse::_4ice| = mus:en:__öss|en
+nest::s| = bo:n|a|s
 pen::s| = penna:n:_or|na
+rat::s| = råtta:n:_or|na
 result::s| = resultat:et::en
 sea::s| = hav:et::en
 search = sök/
