--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -1,7 +1,8 @@
 address::es| = adress:en:er|na
-apple::s| = äpple:t:n:na
+apple::s|<t = äpple:t:n:na
 ball::s| = boll:en:ar|na
 banana::s| = banan:en:er|na
+bed::s| = säng:en:ar|na
 bouncing ball::s| = studsboll:en:ar|na
 car::s| = bil:en:ar|na
 cat::s| = katt:en:er|na
@@ -10,11 +11,11 @@ colour::s| = färg:en:er|na
 foot::_3eet| = fot:en:__ötter|na
 lake::s| = sjö:n:ar|na
 mouse::_4ice| = mus:en:__öss|en
-nest::s| = bo:n|a|s
+nest::s|<t = bo:n|a|s
 pen::s| = penna:n:_or|na
 rat::s| = råtta:n:_or|na
-result::s| = resultat:et::en
-sea::s| = hav:et::en
+result::s|<t = resultat:et::en
+sea::s|<t = hav:et::en
 search = sök/
 street::s| = gata:n:_or|na/_u
 wall::s| = vägg:en:ar|na
