--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -165,4 +165,5 @@
 //references
 "the red cat ate a blue mouse", "den röda katten åt en blå mus"
 "The cat caught a rat and ate it", "Katten fångade en råtta och åt den"
-//"The rat made a nest and slept in it.", "Råttan byggde ett bo och sov i det."
+"The rat made a nest and slept in it.", "Råttan byggde ett bo och sov i det."
+"The rat made a bed and slept in it.", "Råttan byggde en säng och sov i den."
