All tests green TODO: Optimize running test suites and learning

--- a/Languages/EnglishSwedish/Patterns.txt
+++ b/Languages/EnglishSwedish/Patterns.txt
@@ -1,37 +1,28 @@
-﻿Xfr:2
-^Adn:1
-^Vi:1
+﻿^Ad*:1
+^Vi*:1
 I*:1
-NtC*:1
-Q*Adn:1
-Q*Ngn:1
-QnNn:1
-R*Adn:1
-R*V1:1
-R3tX*A*:1
-R3tX*R1m:1
-T*Ndn:1
-T*Ndnt:1
-T*Ndt:1
-TdNd:1
-TdnqAdnNdn:1
-TdnqAdsNdn:1
-TdnqQ*A*Ndn:1
-TdqAdnNd:1
-TdqAdsNd:1
+P*:1
+P*R*:1
+Q*Ad*:1
+Qn*Nn*:1
+R*V1*:1
+R2:1
+Rt*X*A*:1
+Rt*X*R1m:1
+Td*Nd*:1
+Tdq*Ad*Nd*:1
 TN:1
-TNg:1
-TqtN*C*V*P*R3t:1
-V*At:1
-V*P*:1
-X*Vr:1
-X1Vr:1
-X1X*Vlr:1
-Xf:1
-XfrVlr:1
-XfVf:1
-XpVlr:1
-A*:-1
+Tn*A*Nn*:1
+Tnq*Q*A*Nd*:1
+Tt*N*C*V*P*Rt*:1
+V*At*:1
+X1*:1
+X1*Vr:1
+X3*Vr*:1
+Xf*:1
+Xf*Vf*:1
+Xp*Vr*:1
+Xr*:1
+Xr*Vr*:1
+Xrf*:1
 N*:-1
-Ng:-1
-Ngn:-1
