--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -9,12 +9,15 @@ cat::s| = katt:en:er|na
 chair::s| = stol:en:ar|na
 colour::s| = färg:en:er|na
 foot::_3eet| = fot:en:__ötter|na
+hand::s| = hand:en:_3änder|na
 lake::s| = sjö:n:ar|na
+morning::s| = morgon:en:_2nar|na
 mouse::_4ice| = mus:en:__öss|en
 nest::s|<t = bo:n|a|s
 pen::s| = penna:n:_or|na
 rat::s| = råtta:n:_or|na
 result::s|<t = resultat:et::en
+school::s| = skola:n::_orna
 sea::s|<t = hav:et::en
 search = sök/
 street::s| = gata:n:_or|na/_u
