--- a/Languages/EnglishSwedish/Words/Adjectives.txt
+++ b/Languages/EnglishSwedish/Words/Adjectives.txt
@@ -8,6 +8,7 @@ easy peasy = lätt som en plätt
 English- = engelsk
 fast:::er:est|: = snabb:t:a|re:ast|e:t
 French- = fransk
+good = god
 good-looking = snygg
 green:::er:est| = grön:t:a|re:ast|e
 non- = icke-
