--- a/Languages/EnglishSwedish/Words/Verbs.txt
+++ b/Languages/EnglishSwedish/Words/Verbs.txt
@@ -5,11 +5,13 @@ catch::ing:::es::_3ught|:ing| = fånga::r||||:de:t|:
 come::ing:::s::_3ame|:ing| = kom:ma:mer||||::::ma
 eat::ing:::s::_3ate|:ing| = ät:a:er||||:_2åt:it|:a
 give::_ing:::s::d|:_ing| = ge::r||||:_2v:tt|:
+go::_ing:::es::_2went|:_ing| = gå::r||||:_ick:_av|:
 help::ing:::s::ed|:ing| = hjälp:a:er||||:te:::a
 make::ing:::s::_2de|:ing| = bygg:a:er||||:de:t|:
 paint::ing:::s::ed|:ing| = måla::r||||:de:t|:
 play::ing:::s::ed|:ing| = lek:a:er||||:te:t|:a
 run::ning:::s::_2an|:ning| = spring:a:er||||:_3ang:_3ungit|:a
+shake::ing:::s::d|:ing| = skaka::r||||:de:t|:
 sleep::ing:::s::_2pt|:ing| = sov:a:er||||::it|:a
 
 //Settings
