Reimplemented TargetSelector TODO: trainer enters infinite loop for some test cases

--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -167,3 +167,5 @@
 "The cat caught a rat and ate it", "Katten fångade en råtta och åt den"
 "The rat made a nest and slept in it.", "Råttan byggde ett bo och sov i det."
 "The rat made a bed and slept in it.", "Råttan byggde en säng och sov i den."
+
+"I want to go to the theater", "Jag vill gå till teatern"
