Finally!! All tests working again TODO: Optimize (times doubled)

--- a/Languages/EnglishSwedish/Patterns.txt
+++ b/Languages/EnglishSwedish/Patterns.txt
@@ -1,28 +1,40 @@
-﻿^Ad*:1
-^Vi*:1
+﻿R*Vl*:2
+Vf*:2
+Xf*:2
+Ad*:1
 I*:1
-Q*Ad*:1
+I*V:1
+Nt*C*V*P*Rt*:1
 Qn*Nn*:1
-R*Ad*:1
 R*V1*:1
 Rt*X*A*:1
-Rt*X*R1m:1
+Rt*X*R*N*:1
+T*A:1
+T*Q*A*Nd*:1
+Td*A*Nd*:1
+Td*Ad*:1
 Td*Nd*:1
-Tdq*Ad*Nd*:1
-TN:1
-Tn*A*Nn*:1
-Tnq*Q*A*Nd*:1
-Tt*N*C*V*P*Rt*:1
+TdqA*Nd:1
+Tnq*A*:1
+Tnq*Q*:1
 V*At*:1
 V*P*:1
+V*Tt*Nt*:1
+V1*:1
+Vi*P*:1
+Vi*P*R*:1
+Vi*P*T*:1
+Vi*R*:1
+Vl*T*:1
+VlT*:1
+VP*:1
+VT*:1
+X*V:1
+X*Vr*:1
 X1*:1
-X1*Vr:1
-X3*Vr*:1
-Xf*:1
-Xf*Vf*:1
+Xi*I*:1
 Xp*Vr*:1
 Xr*:1
-Xr*Vr*:1
-Xrf*:1
+Xr*Vl*:1
 A*:-1
 N*:-1
