Implemented adverbs - added test cases on references

--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -165,7 +165,17 @@
 //references
 "the red cat ate a blue mouse", "den röda katten åt en blå mus"
 "The cat caught a rat and ate it", "Katten fångade en råtta och åt den"
-"The rat made a nest and slept in it.", "Råttan byggde ett bo och sov i det."
-"The rat made a bed and slept in it.", "Råttan byggde en säng och sov i den."
-
+"The rat made a nest and slept in it.", "Råttan gjorde ett bo och sov i det."
+"The rat made a bed and slept in it.", "Råttan gjorde en säng och sov i den."
 "I want to go to the theater", "jag vill gå till teatern"
+"I have a ball. It is red.", "Jag har en boll. Den är röd."
+"I have a table. It is big.", "Jag har ett bord. Det är stort."
+"I have two balls. They are red.", "Jag har två bollar. De är röda."
+"It is kind of you.", "Det är snällt av dig."
+"That ball is red.", "Den bollen är röd."
+"It is a red ball.", "Det är en röd boll."
+//"The ball hit a table. It made a mark in it.", "Bollen träffade ett bord. Den gjorde ett märke i det."
+//"The table stood on a rug. It made a mark in it.", "Bordet stod på en matta. Det gjorde ett märke i den."
+//"When I was young I was a salesman.", "När jag var ung var jag en säljare."
+//"Today I have been to the concert hall.", "Idag har jag varit till konserthallen."
+//"I'm sitting in the room and looking at dolls.", "Jag sitter i rummet och tittar på dockor."
