--- a/Languages/EnglishSwedish/Words/Auxiliarys.txt
+++ b/Languages/EnglishSwedish/Words/Auxiliarys.txt
@@ -1,4 +1,4 @@
-be::ing!am!are!is!are!been!were = var:a:_3är||||::it:
+be::ing!am!are!is!are!been!were:ing| = var:a::_3är|||:it:::
 have::_ing:::_2s::_2d: = ha::r||||:de:ft:
 want::_ing:::s::_3ould:_ing = vill:::::::e:_3elat:
 will::_ing:::::_3ould:_ing = ska:::::::_ulle:_olat:
