--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -3,24 +3,32 @@ apple::s|<t = äpple:t:n:na
 ball::s| = boll:en:ar|na
 banana::s| = banan:en:er|na
 bed::s| = säng:en:ar|na
+book::s| = bok:en:_2öcker|na
 bouncing ball::s| = studsboll:en:ar|na
 car::s| = bil:en:ar|na
 cat::s| = katt:en:er|na
 chair::s| = stol:en:ar|na
 colour::s| = färg:en:er|na
+concert::s| = konsert:en:er|na/
+doll::s| = docka:n:_or|na
 foot::_3eet| = fot:en:__ötter|na
+hall::s| = hall:en:ar|na
 hand::s| = hand:en:_3änder|na
 lake::s| = sjö:n:ar|na
+mark::s| = märke:t:n|a
 morning::s| = morgon:en:_2nar|na
 mouse::_4ice| = mus:en:__öss|en
 nest::s|<t = bo:n|a|s
 pen::s| = penna:n:_or|na
 rat::s| = råtta:n:_or|na
 result::s|<t = resultat:et::en
+room::s| = rum:::men
+rug::s| = matta:n::_orna
 school::s| = skola:n::_orna
 sea::s|<t = hav:et::en
 search = sök/
 street::s| = gata:n:_or|na/_u
+table::s|<t = bord:et:|en
 theater::s| = teater:n:_2rar|na
 wall::s| = vägg:en:ar|na
 
