--- a/Languages/EnglishSwedish/Words/Verbs.txt
+++ b/Languages/EnglishSwedish/Words/Verbs.txt
@@ -7,12 +7,17 @@ eat::ing:::s::_3ate|:ing| = ät:a:er||||:_2åt:it|:a
 give::_ing:::s::d|:_ing| = ge::r||||:_2v:tt|:
 go::_ing:::es::_2went|:_ing| = gå::r||||:_ick:_av|:
 help::ing:::s::ed|:ing| = hjälp:a:er||||:te:::a
-make::ing:::s::_2de|:ing| = bygg:a:er||||:de:t|:
+hit::ing:::s::|:ing| = träffa::r||||:de:::
+look::ing:::s::ed|:ing| = titta::||||:de|t|:
+make::ing:::s::_2de|:ing| = gör:a:||||:_2jorde|_2t|:
 paint::ing:::s::ed|:ing| = måla::r||||:de:t|:
 play::ing:::s::ed|:ing| = lek:a:er||||:te:t|:a
 run::ning:::s::_2an|:ning| = spring:a:er||||:_3ang:_3ungit|:a
 shake::ing:::s::d|:ing| = skaka::r||||:de:t|:
 sleep::ing:::s::_2pt|:ing| = sov:a:er||||::it|:a
+sit::ting:::s::_2at|:ing| = sitt:a:er||||::_3uttit|:a
+stand::ing:::s::_3ood|:ing| = stå::r||||:_od:tt|:
+write::ing:::s::_3ote|:ing| = skriva::_er||||:_3ev:_3ivit|:
 
 //Settings
 BaseForm = 1
