--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -22,7 +22,7 @@ nest::s|<t = bo:n|a|s
 pen::s| = penna:n:_or|na
 rat::s| = råtta:n:_or|na
 result::s|<t = resultat:et::en
-room::s| = rum:::men
+room::s| = rum:met::men
 rug::s| = matta:n::_orna
 school::s| = skola:n::_orna
 sea::s|<t = hav:et::en
