--- a/Languages/EnglishSwedish/Words/Verbs.txt
+++ b/Languages/EnglishSwedish/Words/Verbs.txt
@@ -8,7 +8,7 @@ give::_ing:::s::d|:_ing| = ge::r||||:_2v:tt|:
 go::_ing:::es::_2went|:_ing| = gå::r||||:_ick:_av|:
 help::ing:::s::ed|:ing| = hjälp:a:er||||:te:::a
 hit::ing:::s::|:ing| = träffa::r||||:de:::
-look::ing:::s::ed|:ing| = titta::||||:de|t|:
+look::ing:::s::ed|:ing| = titta::r||||:de|t|:
 make::ing:::s::_2de|:ing| = gör:a:||||:_2jorde|_2t|:
 paint::ing:::s::ed|:ing| = måla::r||||:de:t|:
 play::ing:::s::ed|:ing| = lek:a:er||||:te:t|:a
