Handle invalid casing in testcase Added testcase for adverb with unhandled verb-form

--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -178,6 +178,6 @@
 //"The table stood on a rug. It made a mark in it.", "Bordet stod på en matta. Det gjorde ett märke i den."
 
 //Adverbs
-//"When I was young I was a salesman.", "När jag var ung var jag en säljare."
+"When I was young I was a salesman.", "När jag var ung var jag en säljare."
 "Today I have been to the concert hall.", "Idag har jag varit till konserthallen."
 "I'm sitting in the room and looking at dolls.", "Jag sitter i rummet och tittar på dockor."
