Expanded verbforms. Some tests failing

--- a/Languages/EnglishSwedish/Words/Auxiliarys.txt
+++ b/Languages/EnglishSwedish/Words/Auxiliarys.txt
@@ -1,8 +1,8 @@
-be::ing!am!are!is!are!been!were:ing| = var:a::_3är|||:it:::
-have::_ing:::_2s::_2d: = ha::r||||:de:ft:
-want::_ing:::s::_3ould:_ing = vill:::::::e:_3elat:
-will::_ing:::::_3ould:_ing = ska:::::::_ulle:_olat:
-shall:::::::_3ould: = ska:::::::_ulle:_olat:
+be::ing !am!are!is!are !was!were!was!were :en:ing| = var:a!är |||| :||| :it::a
+have::_ing :::_2s: :_2d||| |:_ing| = ha::r |||| :de||| :ft:de:
+want::ing :::s: !would||| :ed:_ing| = vill:_ja: |||| :e||| !velat:e:_ja
+will!! :::: !would||| !|| = ska!! :||| :_ulle||| !||
+shall!! :::: !should||| !|| = ska!! :||| :_ulle||| !||
 :will be<f = :kommer att
 :will have been<fr = :kommer att ha
 :could have been<fr = :kunde ha
