--- a/Languages/EnglishSwedish/Words/Verbs.txt
+++ b/Languages/EnglishSwedish/Words/Verbs.txt
@@ -1,23 +1,21 @@
-/// (Imperative|Infinitive|Participle)|(First|Second|Third|ThirdPlural)|(Perfect-First|Perfect-Second|Perfect-Third)|(Past|PastContinuous|FutureContinuous)
-
-build::ing :::s: :_t|||	|:ing| = bygg:a:er |||| :de||| :t:de:a
-catch::ing :::es: !caught|| |:ing| = fånga::r |||| :de||| :t:de:
-come::ing :::s: !came||| |:ing| = kom:ma:mer |||| :||| :mit::ma
-eat::ing :::s: !ate||| |:ing| = ät:a:er |||| !åt||| :it!åt:a
-give::_ing :::s: !gave||| |:_ing| = ge::r |||| !gav||| :tt!gav:
-go::ing :::es: !went||| |:ing| = gå::r |||| !gick||| :tt!gick:
-help::ing :::s: :ed||| |:ing| = hjälp:a:er |||| :te||| :t|e:a
-hit::ing :::s: :||| |:ing| = träffa::r |||| :de||| :t:de:
-look::ing :::s: :ed||| |:ing| = titta::r |||| :de||| :t:de:
-make::ing :::s: :_2de||| |:ing| = gör:a: |||| !gjorde||| |_2t|_de:a
-paint::ing :::s: :ed||| |:ing| = måla::r |||| :de||| :t:de:
-play::ing :::s: :ed||| |:ing| = lek:a:er |||| :te||| |_|e:a
-run::ning :::s: :_2an||| |:ning| = spring:a:er |||| :_3ang||| :_3ungit:_3ang:a
-shake::_ing :::s: :d||| |:_ing| = skaka::r |||| :de||| :t:de:
-sleep::ing :::s: :_2pt||| |:ing| = sov:a:er |||| :||| :it::a
-sit::ting :::s: !sat||| |:ing| = sitt:a:er |||| !satt||| !suttit!satt:a
-stand::ing :::s: !stood||| |:ing| = stå::r |||| :_od||| :tt:_od:
-write::ing :::s: !wrote||| |:ing| = skriva::_er |||| :_3ev||| :_it:_3ev:
+build: :::s: :_t|||| :ing||| = bygg:a :er||| :de|||:t :er:de:t:a
+catch: :::es: !caught||| :ing||| = fånga: :r||| :de|||:t :r:de:t:
+come: :::s: !came|||: :_ing||| = kom:ma :mer||| :|||:mit :mer::mit:ma
+eat: :::s: !ate|||:en :ing||| = ät:a :er||| !åt|||:it :er!åt:it:a
+give: :::s: !gave|||:n :_ing||| = ge: :r||| !gav|||:tt :r!gav:tt:
+go: :::es: !went|||:ne :ing||| = gå: :r||| !gick|||:tt :r!gick:tt:
+help: :::s: :ed|||| :ing||| = hjälp:a :er||| :te|||:t :er:te:t:a
+hit: :::s: :|||| :ting||| = träffa: :r||| :de|||:t :r:de:t:
+look: :::s: :ed|||| :ing||| = titta: :r||| :de|||:t :r:de:t:
+make: :::s: :_2de|||| :_ing||| = gör:a :||| !gjorde||||_2t :!gjorde|_2t:a
+paint: :::s: :ed|||| :ing||| = måla: :r||| :de|||:t :r:de:t:
+play: :::s: :ed|||| :ing||| = lek:a :er||| :te|||:t :er:te:t:a
+run: :::s: !ran|||: :ning||| = spring:a :er||| :_3ang||||_3ungit :er:_3ang|_3ungit:a
+shake: :::s: :d|||| :_ing||| = skaka: :r||| :de|||:t :r:de:t:
+sleep: :::s: :_2pt|||| :ing||| = sov:a :er||| :|||:it :er::it:a
+sit: :::s: !sat|||| :ting||| = sitt:a :er||| !satt|||!suttit :er!satt!suttit:a
+stand: :::s: !stood||| :ing||| = stå: :r||| :_od|||:tt :r:_od:tt:
+write: :::s: !wrote|||:_ten :ing||| = skriva: :_er||| :_3ev|||:_it :_er:_3ev:_it: 
 
 //Settings
 BaseForm = 1
