--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -23,8 +23,9 @@ pen::s| = penna:n:_or|na
 rat::s| = råtta:n:_or|na
 result::s|<t = resultat:et::en
 room::s| = rum:met::men
-rug::s| = matta:n::_orna
-school::s| = skola:n::_orna
+rug::s| = matta:n:_or|na
+salesman::_2en| = säljare:n::_na
+school::s| = skola:n:_or|na
 sea::s|<t = hav:et::en
 search = sök/
 street::s| = gata:n:_or|na/_u
