--- a/Languages/EnglishSwedish/Words/Verbs.txt
+++ b/Languages/EnglishSwedish/Words/Verbs.txt
@@ -1,21 +1,21 @@
-build: :::s: :_t|||| :ing||| = bygg:a :er||| :de|||:t :er:de:t:a
-catch: :::es: !caught||| :ing||| = fånga: :r||| :de|||:t :r:de:t:
-come: :::s: !came|||: :_ing||| = kom:ma :mer||| :|||:mit :mer::mit:ma
-eat: :::s: !ate|||:en :ing||| = ät:a :er||| !åt|||:it :er!åt:it:a
-give: :::s: !gave|||:n :_ing||| = ge: :r||| !gav|||:tt :r!gav:tt:
-go: :::es: !went|||:ne :ing||| = gå: :r||| !gick|||:tt :r!gick:tt:
-help: :::s: :ed|||| :ing||| = hjälp:a :er||| :te|||:t :er:te:t:a
-hit: :::s: :|||| :ting||| = träffa: :r||| :de|||:t :r:de:t:
-look: :::s: :ed|||| :ing||| = titta: :r||| :de|||:t :r:de:t:
-make: :::s: :_2de|||| :_ing||| = gör:a :||| !gjorde||||_2t :!gjorde|_2t:a
-paint: :::s: :ed|||| :ing||| = måla: :r||| :de|||:t :r:de:t:
-play: :::s: :ed|||| :ing||| = lek:a :er||| :te|||:t :er:te:t:a
-run: :::s: !ran|||: :ning||| = spring:a :er||| :_3ang||||_3ungit :er:_3ang|_3ungit:a
-shake: :::s: :d|||| :_ing||| = skaka: :r||| :de|||:t :r:de:t:
-sleep: :::s: :_2pt|||| :ing||| = sov:a :er||| :|||:it :er::it:a
-sit: :::s: !sat|||| :ting||| = sitt:a :er||| !satt|||!suttit :er!satt!suttit:a
-stand: :::s: !stood||| :ing||| = stå: :r||| :_od|||:tt :r:_od:tt:
-write: :::s: !wrote|||:_ten :ing||| = skriva: :_er||| :_3ev|||:_it :_er:_3ev:_it: 
+build 4::s 5:_t 4:ing = bygg:a 4:er 4:de:t :er:de:t:a
+catch 4::es 5!caught 4:ing = fånga: 4:r 4:de:t :r:de:t:
+come 4::s 4!came: 4:_ing = kom:ma 4:mer 4::mit :mer::mit:ma
+eat 4::s 4!ate:en 4:ing = ät:a 4:er 4!åt:it :er!åt:it:a
+give 4::s 4!gave:n 4:_ing = ge: 4:r 4!gav:tt :r!gav:tt:
+go 4::es 4!went:ne 4:ing = gå: 4:r 4!gick:tt :r!gick:tt:
+help 4::s 5:ed 4:ing = hjälp:a 4:er 4:te:t :er:te:t:a
+hit 4::s 5: 4:ting = träffa: 4:r 4:de:t :r:de:t:
+look 4::s 5:ed 4:ing = titta: 4:r 4:de:t :r:de:t:
+make 4::s 5:_2de 4:_ing = gör:a 4: 4!gjorde|_2t :!gjorde|_2t:a
+paint 4::s 5:ed 4:ing = måla: 4:r 4:de:t :r:de:t:
+play 4::s 5:ed 4:ing = lek:a 4:er 4:te:t :er:te:t:a
+run 4::s 4!ran: 4:ning = spring:a 4:er 4:_3ang|_3ungit :er:_3ang|_3ungit:a
+shake 4::s 4:d:n 4:_ing = skaka: 4:r 4:de:t :r:de:t:
+sleep 4::s 5:_2pt 4:ing = sov:a 4:er 4::it :er::it:a
+sit 4::s 5!sat 4:ting = sitt:a 4:er 4!satt!suttit :er!satt!suttit:a
+stand 4::s 5!stood 4:ing = stå: 4:r 4:_od:tt :r:_od:tt:
+write 4::s 4!wrote:_ten 4:ing = skriva: 4:_er 4:_3ev:_it :_er:_3ev:_it: 
 
 //Settings
 BaseForm = 1
