Added testcase + some refactoring

--- a/Languages/EnglishSwedish/Words/Adjectives.txt
+++ b/Languages/EnglishSwedish/Words/Adjectives.txt
@@ -1,6 +1,7 @@
 ﻿achievement-oriented = prestationsorienterad
 alright = okej
 big:::er:est| = stor:t:a|_2örre:_2örst|a
+black:::er:est| = svart::a|re:ast|e
 blue:::r:st| = blå:tt:a|re:ast|e
 red:::er:est| = röd:_tt:a|re:ast|e
 easy:::_ier|_st:_ily = lätt::a|re:ast|e:
