Handle genetives of names

--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -182,5 +182,5 @@
 "Today I have been to the concert hall.", "Idag har jag varit till konserthallen."
 "I'm sitting in the room and looking at dolls.", "Jag sitter i rummet och tittar på dockor."
 
-//"I'm sitting in Joakim's livingroom", "Jag sitter i Joakims vardagsrum"
+"I'm sitting in Joakim's livingroom.", "Jag sitter i Joakims vardagsrum."
 "I have black trousers.", "Jag har svarta byxor."
