--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -12,6 +12,8 @@ colour::s| = färg:en:er|na
 concert::s| = konsert:en:er|na/
 doll::s| = docka:n:_or|na
 foot::_3eet| = fot:en:__ötter|na
+error::s| = fel:et:er:en
+essay::s| = uppsats:en:er|na
 hall::s| = hall:en:ar|na
 hand::s| = hand:en:_3änder|na
 lake::s| = sjö:n:ar|na
