--- a/Languages/EnglishSwedish/Words/Pronouns.txt
+++ b/Languages/EnglishSwedish/Words/Pronouns.txt
@@ -3,7 +3,7 @@ we!us!our|s<1n = vi!oss!vår|
 you::re|_s<2 = du:_ig:_in|
 you::re|_s<2n = ni!er||
 he:_im:_is|<3 = han!honom:s|
-she!her:s|<3 = hon!henne|s|
+she!her|:s<3 = hon!henne|s|
 it::s|<3 = den::_ss|
 it::s|<3t = det::_ss|
 they:_m:_ir|s<3n = de:m:ras|
