--- a/Languages/EnglishSwedish/Words/Verbs.txt
+++ b/Languages/EnglishSwedish/Words/Verbs.txt
@@ -1,11 +1,14 @@
 build 4::s 5:_t 4:ing = bygg:a 4:er 4:de:t :er:de:t:a
 catch 4::es 5!caught 4:ing = fånga: 4:r 4:de:t :r:de:t:
 come 4::s 4!came: 4:_ing = kom:ma 4:mer 4::mit :mer::mit:ma
+contain 4::s 4:ed: 4:ing = innehåll:a 4:er 4:_3öll:it :er:_3öll:it:a
 eat 4::s 4!ate:en 4:ing = ät:a 4:er 4!åt:it :er!åt:it:a
+find 4::s 5!found 4:ing = hitta: 4:r 4:de:t :r:de:t:
 give 4::s 4!gave:n 4:_ing = ge: 4:r 4!gav:tt :r!gav:tt:
 go 4::es 4!went:ne 4:ing = gå: 4:r 4!gick:tt :r!gick:tt:
 help 4::s 5:ed 4:ing = hjälp:a 4:er 4:te:t :er:te:t:a
 hit 4::s 5: 4:ting = träffa: 4:r 4:de:t :r:de:t:
+know 4::s 4:_2ew:n 4:ing = veta: 4:_ 4!visste:t :!visste:t:
 look 4::s 5:ed 4:ing = titta: 4:r 4:de:t :r:de:t:
 make 4::s 5:_2de 4:_ing = gör:a 4: 4!gjorde|_2t :!gjorde|_2t:a
 paint 4::s 5:ed 4:ing = måla: 4:r 4:de:t :r:de:t:
