--- a/Languages/EnglishSwedish/Patterns.txt
+++ b/Languages/EnglishSwedish/Patterns.txt
@@ -2,44 +2,53 @@
 Vf*:3
 Vl:2
 .R3:1
+^TdqAd*:1
+A.:1
+A_C*:1
 Ad*:1
+AR*:1
+At*.:1
 At*P*:1
+B*V:1
 I*V:1
 Nd*X*:1
-Nt*.R*X*At*:1
-Nt*.Rt*:1
-Nt*C*V*P*Rt*:1
+Nt*___At*:1
+Nt*___Rt*:1
+Nt*_Rt*:1
 P*Ro*:1
+P*Tq*A:1
+Q_Nnd*:1
 Qn*Nn*:1
 R*V1*:1
-R*Vl:1
-Rt*X*A*:1
-Rt*X*R*N*:1
-Rt*X*T*:1
+Rm*:1
+Rt*__N*:1
+Rt*_A*:1
+Rt*_T*:1
+Rt3.:1
 T*A:1
-T*Q*A*Nd*:1
 Td*A*Nd*:1
-Td*Ad*:1
 Td*Nd*:1
-TdqA*Nd:1
-Tnq*A*:1
-Tnq*Q*:1
+Tn*_Nn*:1
+Tn*As*:1
+Tnq*And*:1
+Tnq*Q*Ad*:1
+Tq*A*Nnd*:1
+Tt*_,:1
+Tt*Nt:1
 V*At*:1
+V*C*:1
 V*P*:1
-V*Tt*Nt*:1
 V1*:1
+Vi*_R*:1
+Vi*_T*:1
 Vi*P*:1
-Vi*P*R*:1
-Vi*P*T*:1
 Vi*R*:1
+Vl.:1
 VlP*:1
 VlT*:1
 VP*:1
 Vr*:1
 VT*:1
-X*A:1
-X*At*:1
-X*Tt*Nt*:1
 X*V:1
 X*Vr*:1
 X1*:1
