--- a/Languages/EnglishSwedish/PatternsOld.txt
+++ b/Languages/EnglishSwedish/PatternsOld.txt
@@ -1,22 +1,23 @@
-﻿Vf*:3
+﻿Xf*:5
+Vf*:3
 Vl:2
-Vl.:2
-Xf*V*:2
 .R3:1
+^TdqAd*:1
 A.:1
 A_C*:1
 Ad*:1
 AR*:1
 At*.:1
 At*P*:1
-I*:1
+B*V:1
 I*V:1
 Nd*X*:1
 Nt*___At*:1
 Nt*___Rt*:1
 Nt*_Rt*:1
 P*Ro*:1
-P*T*:1
+P*Tq*A:1
+Q_Nnd*:1
 Qn*Nn*:1
 R*V1*:1
 Rm*:1
@@ -24,37 +25,36 @@ Rt*__N*:1
 Rt*_A*:1
 Rt*_T*:1
 Rt3.:1
-T*__Nd*:1
 T*A:1
 Td*A*Nd*:1
-Td*Ad*:1
 Td*Nd*:1
-TdqA*Nd:1
-Tnq*A*:1
-Tnq*Q*:1
+Tn*_Nn*:1
+Tn*As*:1
+Tnq*And*:1
+Tnq*Q*Ad*:1
+Tq*A*Nnd*:1
 Tt*_,:1
 Tt*Nt:1
 V*At*:1
 V*C*:1
 V*P*:1
-V*Rt*.:1
 V1*:1
 Vi*_R*:1
 Vi*_T*:1
 Vi*P*:1
 Vi*R*:1
-Vl_N*:1
+Vl.:1
 VlP*:1
+VlT*:1
 VP*:1
 Vr*:1
 VT*:1
-X*_V*:1
 X*V:1
 X*Vr*:1
 X1*:1
 X2*Ad*:1
-Xf*:1
 Xf*V:1
+Xi*I*:1
 Xr*Vr*:1
 N*:-1
-X*:-1
+X*:-2
